welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
	getCouleurBrosse(T(i))
                        ^